# Fact-Check-Live-AI

./: .gitignore  DEVELOPER_NOTES.md  Dockerfile  Dockerfile.backend  README.md  cloudrun.yaml  docker-compose.yml  mcp-server.js  package-lock.json  package.json  pyproject.toml  qa_api_report.json  qa_api_tests.py  qa_ui_report.json  qa_ui_tests.py  record_capstone_demo.py  server.js
agents/: __init__.py  config.py  context_agent.py  guardrails.py  language_agent.py  orchestrator.py  source_agent.py
agents/tools/: __init__.py  context_tools.py  language_tools.py  source_tools.py
app/: __init__.py  guardrails.py  server.py  tools.py
app/agents/: __init__.py  context_agent.py  language_agent.py  orchestrator.py  source_agent.py
public/: index.html
