[project]
name = "factcheck-live"
version = "0.1.0"
description = "FactCheck Live — Multi-agent real-time news credibility verification powered by Google ADK"
authors = [
    {name = "Nikhil", email = "nikhil@example.com"},
]

dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
]
requires-python = ">=3.11,<3.14"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6,<1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]
